--- a/ExtentReports/index.html
+++ b/ExtentReports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">29-06-2020 19:05:02</span>
+                    <span class="badge badge-primary">02-07-2020 06:58:04</span>
                 </a>
             </li>
         </ul>
@@ -123,8 +123,8 @@
 											<div class="open-test">
 												<div class="test-detail"> 
 													<p class="name">LoginTest</p> 
-													<p class="duration text-sm">0h:0m:6s+702ms</p> 
-													<span class="datetime">19:05:02 PM</span>
+													<p class="duration text-sm">0h:0m:5s+698ms</p> 
+													<span class="datetime">06:58:04 AM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
@@ -132,9 +132,9 @@
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
 															<h5 class="test-status text-pass">LoginTest</h5>
-															<span class='badge badge-success'>29-06-2020 19:05:02</span>
-															<span class='badge badge-danger'>29-06-2020 19:05:09</span>
-															<span class='badge badge-default'>0h:0m:6s+702ms</span>
+															<span class='badge badge-success'>02-07-2020 06:58:04</span>
+															<span class='badge badge-danger'>02-07-2020 06:58:09</span>
+															<span class='badge badge-default'>0h:0m:5s+698ms</span>
 														</div>
 																											</div>
 												</div>
@@ -149,15 +149,64 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>19:05:02</td>
+				<td>06:58:04</td>
 				<td>
 Login Test Started									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>19:05:09</td>
+				<td>06:58:09</td>
 				<td>
 Login Done									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">ArticleUploadTes</p> 
+													<p class="duration text-sm">0h:0m:59s+658ms</p> 
+													<span class="datetime">06:58:10 AM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">ArticleUploadTes</h5>
+															<span class='badge badge-success'>02-07-2020 06:58:10</span>
+															<span class='badge badge-danger'>02-07-2020 06:59:10</span>
+															<span class='badge badge-default'>0h:0m:59s+658ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-info text-info"></i></td>
+				<td>06:58:10</td>
+				<td>
+Article Upload Test Started									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-info text-info"></i></td>
+				<td>06:59:10</td>
+				<td>
+Articles Get Uploaded Successfully									</td>
 			</tr>
 	</tbody>
 </table>
